--- a/Second Year/Reti di Calcolatori/EserciziReti.tex
+++ b/Second Year/Reti di Calcolatori/EserciziReti.tex
@@ -1,8 +1,8 @@
-\documentclass[12pt]{article}
+\documentclass[a4paper]{article}
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{pgfplots}
-\pgfplotsset{compat=1.18}
+% \pgfplotsset{compat=1.18}
 \usepackage{listings}
 \usepackage{enumitem}
 \usepackage{cancel}
