Added Es3 EserciziSistemi

--- a/Second Year/EserciziSistemi/EserciziSistemi.tex
+++ b/Second Year/EserciziSistemi/EserciziSistemi.tex
@@ -327,15 +327,15 @@ Mettiamo a sistema i corrispettivi delta e poniamo $t = 0$:
 &\begin{cases}
     0 = \delta''(t)\\
     (d_1e^{-t} + d_2e^{-t}t)\delta'(t) = 0\\
-    2\delta_0(t)((-d_1e^{-t} + \cancel{-d_2e^{-t}t} + d_2e^{-t})) + (d_1e^{-t} + \cancel{d_2e^{-t}t})\delta_0(t)= \delta_0(t)
+    2\delta_0(t)((-d_1e^{-t} + \cancel{-d_2e^{-t}t} + d_2e^{-t})) + 2\delta_0(t)(d_1e^{-t} + \cancel{d_2e^{-t}t})= \delta_0(t)
 \end{cases}\\
 &\begin{cases}
     d_1 = 0\\
-    2\delta_0(t)(-d_1 + d_2) + d_1\delta_0(t) = \delta_0(t) 
+    2\delta_0(t)(-d_1 + d_2) + 2d_1\delta_0(t) = \delta_0(t) 
 \end{cases}\\
 &\begin{cases}
     d_1 = 0\\
-    -2d_1\cancel{\delta_0(t)} + 2d_2\cancel{\delta_0(t)} + d_1\cancel{\delta_0(t)} = \cancel{\delta_0(t)}
+    -2d_1\cancel{\delta_0(t)} + 2d_2\cancel{\delta_0(t)} + 2d_1\cancel{\delta_0(t)} = \cancel{\delta_0(t)}
 \end{cases}\\
 &\begin{cases}
     d_1 = 0\\
