--- a/Second Year/Reti di Calcolatori/Reti di Calcolatori.tex
+++ b/Second Year/Reti di Calcolatori/Reti di Calcolatori.tex
@@ -1002,7 +1002,7 @@ L'SRTT è uno \textbf{stima} del valore medio del RTT. Questa tecnica si chiama 
 \\ Dato l'SRTT: \[RTO = \beta SRTT_{attuale}\]dove tipicamente $\beta = 2$. Quindi in poche parole, il segmento viene
 ritrasmesso dopo un tempo pari al doppio del tempo medio di ritorno. In caso di perdite, l'RTO per il segmento
 ritrasmesso  viene temporaneamente raddoppiato. Se invio un segmento ad ogni RTT, la velocità di trasmissione
-è  $\frac{1 seg}{k\pi} \rightarrow \frac{1500 byte}{100} = 1200$ byte/sec.
+è  $\frac{1 seg}{k\pi} \rightarrow \frac{1500 byte}{100ms} = 1200$ byte/sec.
 
 \subsection{Controllo di flusso e il controllo di congestione}
 
@@ -1018,8 +1018,147 @@ e cosa succede se uno dei segmenti viene perso? Ci sono due tecniche che ci aiut
 \begin{center}
   Congestione $\Longleftrightarrow$ Perdita di un segmento (Riscontro non ricevuto)
 \end{center}
+Grazie all'ACK che mi dice quale è il prossimo segmento che si aspetta, posso essere sicuro di non perdere i pacchetti ed 
+essere ancora più affidabile.
+Quant'è la dimensione della finestra di trasmissione? Utilizzzare i riscontri (o la loro assenza) per variare in modo dinamico la window size.
+\begin{itemize}
+  \item Se ricevo regolarmente i riscontri, aumento la finestra di trasmissione
+  \begin{itemize}
+    \item Slow Start
+    \item Congestion Avoidance
+  \end{itemize}
+  \item In caso di perdite (RTO scende), diminuisco la finestra di trasmissione 
+  \begin{itemize}
+    \item Vanilla 
+    \item Fast Retransmit/Fast Recovery
+  \end{itemize}
+\end{itemize}
+
+\subsubsection{Slow Start}
+
+Per ogni riscontro ricevuto si fa aumenta la finestra di un segmento. (Oltre a farla scorrere verso destra di un segmento).
+
+\begin{tikzpicture}
+  \begin{axis}[
+      axis lines=middle,
+      xlabel={$t$},
+      ylabel={$w$},
+      xtick={1,2,3},
+      ytick={2,4,8,16},
+      ymin=0, ymax=18,
+      xmin=0, xmax=3.5,
+      axis line style={->},
+      every axis x label/.style={
+          at={(ticklabel* cs:1.05)},
+          anchor=west,
+      },
+      every axis y label/.style={
+          at={(ticklabel* cs:1.05)},
+          anchor=south,
+      }
+  ]
+  
+  % Draw the plot and points
+  \addplot[thick, mark=*] coordinates {(0,2) (1,4) (2,8) (3,16)};
+  
+  % Add labels for each point
+  \node[anchor=south] at (axis cs:0,2) {2};
+  \node[anchor=south] at (axis cs:1,4) {4};
+  \node[anchor=south] at (axis cs:2,8) {8};
+  \node[anchor=south] at (axis cs:3,16) {16};
+  
+  % Dashed line upwards for future points
+  \draw[dashed] (axis cs:3,16) -- (axis cs:3.5,18);
+  
+  \end{axis}
+\end{tikzpicture}
 
 
+\subsubsection{Congestion Avoidance}
+
+Per ogni riscontro ricevuto, aumento la finestra di $1/w$ dove $w$ è la dimensione precedente della finestra.
+
+
+
+\begin{tikzpicture}
+  \begin{axis}[
+      axis lines=middle,
+      xlabel={$t$},
+      ylabel={$w$},
+      xtick={1,2,3},
+      ytick={2,4,8,16},
+      ymin=0, ymax=18,
+      xmin=0, xmax=3.5,
+      axis line style={->},
+      every axis x label/.style={
+          at={(ticklabel* cs:1.05)},
+          anchor=west,
+      },
+      every axis y label/.style={
+          at={(ticklabel* cs:1.05)},
+          anchor=south,
+      }
+  ]
+  
+  % Draw the plot and points
+  \addplot[thick, mark=*] coordinates {(0,2) (1,3) (2,4) (3,5)};
+  
+  % Add labels for each point
+  \node[anchor=south] at (axis cs:0,2) {2};
+  \node[anchor=south] at (axis cs:1,3) {3};
+  \node[anchor=south] at (axis cs:2,4) {4};
+  \node[anchor=south] at (axis cs:3,5) {5};
+  
+  % Dashed line upwards for future points
+  \draw[dashed] (axis cs:3,5) -- (axis cs:4,6);
+  
+  \end{axis}
+\end{tikzpicture}
+
+
+
+\subsubsection{Vanilla}
+
+Se non arriva il riscontro, si attende lo scadere del RTO, si pone la finestra = 1 e si ritrasmettono i segmenti persi.
+
+\subsubsection{Fast Retransmit/Fast Recovery}
+
+In caso di ricezione di ACK duplicati, dopo averne ricevuti 3, si pone la finestra a $w' = \frac{w}{2} \leftarrow$ (finestra al momento della perdita) e
+si ritrasmette il segmento indicato negli ACK duplicati. (E se ci sono le "opzioni" presenti che indicano gli altri segmenti
+segmenti mancanti, si ritrasmettono anche quelli).
+
+\subsubsection{Algoritmo di controllo della congestione del TCP}
+
+Variabili: 
+\begin{itemize}
+  \item \textbf{CWND} $\rightarrow$ Congestion Window $\rightarrow$ dimensione di trasmissione attuale 
+  \item \textbf{RTO} $\rightarrow$ Calcolo dinamicamente in base all'RTT instantaneo e SRTT.
+  \item \textbf{RCVWND} $\rightarrow$ Receive Window $\rightarrow$ Finestra massima di ricezione 
+  \item \textbf{SSTHRESH} $\rightarrow$ Slow Start Threshold $\rightarrow$ Soglia usata per distinguere Slow Start e Congestion Avoidance 
+\end{itemize}
+
+\begin{lstlisting}[language=Scala]
+// Inizializzazione
+CWND = 1
+RCVWND = Viene caricato dalla destinazione in ogni riscontro
+STTHRESH = RCVWND (in alcune implementazioni (RCVWND/2))
+RTO = in base a valore del RTT misurato nel 3-way-handshake
+// Algoritmo
+1 . Invia un numero di seguenti pari alla CWND
+2. Quando arrivano i riscontri
+  if CWND < SSTHRESH // uso slow_start
+    CWND = min(CWND + #ack, RCVWND, STTHRESH)
+  else               // uso Congesture Avoidance
+    CWND = CWND + (#ack/CWND)
+Torno al punto 1. 
+3. Se non arrivano i riscontri -> Scade il RTO
+pongo la STTHRESH = CWND al momento della perdita/2 
+pongo la CWND = 1 // Variante Vanilla TCP
+per i segmenti ritrasmessi pongo RTO = 2RTO
+Torno al punto 1. 
+    
+\end{lstlisting}
+Esempio dell'evoluzione della trasmissione TCP (semplificato poiché siamo nel caso RTT sia mediamente stabile)
 
 
 
