--- a/Second Year/Reti di Calcolatori/EserciziReti.tex
+++ b/Second Year/Reti di Calcolatori/EserciziReti.tex
@@ -250,7 +250,7 @@ Quindi calcoliamo il numero di segmenti, la RCVWND iniziale e la SSTHRESH inizia
 \end{itemize}
 
 \subsubsection{Esercizio 3}
-Appl -> 104000 byte $\rightarrow$ Appl B
+Appl A $\rightarrow$ 104000 byte $\rightarrow$ Appl B
 \begin{itemize}
     \item MSS = 1200 byte
     \item RCVWND = 24000 byte (costante)
@@ -261,5 +261,62 @@ Appl -> 104000 byte $\rightarrow$ Appl B
     \[D_1 = [3.5 \rightarrow 4]\]
     \[D_2 = [6.5 \rightarrow 10.5]\]
 \end{itemize}
+
+\begin{itemize}
+    \item \# segmenti = $\frac{104000}{1200} = 87$
+    \item RCVWND = $\frac{24000}{1200} = 20$ segmenti
+    \item STT = $\frac{RCWND}{2}$ = 10 segmenti
+\end{itemize}
+
+\begin{figure}[H]
+    \centering
+\begin{tikzpicture}
+    \begin{axis}[
+        axis lines=middle,
+        xlabel={$t$},
+        ylabel={$w$},
+        xtick={0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15},
+        ytick={1,2,4,8,16},
+        ymin=0, ymax=23,
+        xmin=0, xmax=15,
+        axis line style={->},
+        every axis x label/.style={
+            at={(ticklabel* cs:1.05)},
+            anchor=west,
+        },
+        every axis y label/.style={
+            at={(ticklabel* cs:1.05)},
+            anchor=south,
+        }
+    ]
+    
+    % Draw the STT Threshold
+    \addplot[domain=0:3.5, samples=100, color=blue]{10};
+    \addplot[domain=3.5:6.5, samples=100, color=blue]{6};
+    \addplot[domain=10.5:15, samples=100, color=blue]{3};
+    \addplot[domain=0:15, samples=100, color=red]{20};
+  
+    
+    
+
+
+    % Draw the plot and points
+    \addplot[thick, mark=*] coordinates {(0,1) (0.5,2) (1,4) (1.5,8) (2,10) (2.5, 11) (3, 12) 
+    (3.5, 13) (4.5, 13) (4.5, 1) (5, 2) (5.5, 4) (6, 6) (6.5, 7) (13.5, 7) (13.5, 1) (14, 2) (14.5, 3) (15, 4)};
+    \fill[orange!40] (3.5, 0) rectangle (4, 23);
+    \fill[orange!40] (6.5, 0) rectangle (10.5, 23);
+    
+    \end{axis}
+  \end{tikzpicture}
+\end{figure}
+
+\begin{align*}
+    SEG = 1 + 2 + 4 + 8 + 10 + 11 + 12 + 1 + 2 + 4 + 6 + 1 + 2 + 3 + \textcolor{red}{4} = 87
+\end{align*}
+
+
+\[CWDN_{new} = CWND_{old} + \frac{\# ACK}{CWND_{old}} = 3 + \frac{3}{3} = 4\]
+
+
 
 \end{document}
